fix dark mode link

--- a/css/main.css
+++ b/css/main.css
@@ -373,7 +373,7 @@ body {
 }
 
 body.dark-mode {
-    background: #dff9fb;
+    background: #E8F5E9;
 }
 
 .dark-mode .spinner {
@@ -524,20 +524,6 @@ nav .dark-mode {
     top: 0
 }
 
-/* @media (min-width:968px) and (max-width:1200px) {
-    nav .container {
-        padding-right: 30px !important;
-    }
-    nav {
-        position: relative;
-    }
-    nav .dark-mode {
-        position: absolute;
-        top: 27px;
-        right: 30px
-    }
-}*/
-
  @media (max-width:968px) {
     nav .container {
         padding-right: 60px !important ;
@@ -551,14 +537,3 @@ nav .dark-mode {
         right: 0;
     }
 }
-/* @media (max-width:667px){
-    nav .container {
-        padding-right: 60px !important ;
-        background: #f89;
-    }
-    nav .dark-mode {
-        position: absolute;
-        top: 10px;
-        right: 0;
-    }
-} */
